<resources>
    <string name="app_name">Pregunta ESPOL</string>
    <string name="form_title_materia">Materia</string>
    <string name="form_title_titulo">Título</string>
    <string name="form_title_descripcion">Descripción</string>
    <string name="eliminar_btn">ELIMINAR</string>
    <string name="editar_btn">EDITAR</string>
    <string name="anuncio_placeholder"><b>Lugar:</b> Fiec Nueva Aula 204–5 \n<b>Hora:</b> 10:00 am – 14:00 pm </string>
    <string name="info_placeholder_materia">Fisica A -</string>
    <string name="info_placeholder_hora"> Hace 2 min</string>
    <string name="mis_preguntas">Mis Preguntas</string>
    <string name="mis_respuestas">Mis Respuestas</string>
    <string name="mis_recompensas">Mis Recompensas</string>
    <string name="mis_anuncios">Mis Anuncios</string>
    <string name="placeholder_titulo_anuncio_card">Publicar anuncio de Fisica</string>
    <string name="placeholder_body_anuncio_card">Le permite publicar un anuncio en el feed de Fisica A</string>
    <string name="btn_recompensa_card">CANJEAR</string>
    <string name="divider">•</string>
    <string-array
        name="materias_array">
        <item>Álgebra Lineal</item>
        <item>Biología</item>
        <item>Análisis de Algoritmos</item>
        <item>Análisis de Redes Eléctricas</item>
        <item>Cálculo Integral</item>
        <item>Cálculo Diferencial</item>
        <item>Cálculo de Varias Variables</item>
        <item>Ecuaciones Diferenciales</item>
        <item>Electrónica</item>
        <item>Ecología</item>
        <item>Estadística</item>
        <item>Estructuras de Datos</item>
        <item>Física A</item>
        <item>Física B</item>
        <item>Física C</item>
        <item>Física D</item>
        <item>Fundamentos de Computación</item>
        <item>Fundamentos de Programación</item>
        <item>Ingeniería de Software</item>
        <item>Ingeniería Económica</item>
        <item>Inteligencia Artificial</item>
        <item>Sistemas Digitales</item>
        <item>Sistemas Lineales</item>
    </string-array>
</resources>
