<?xml version="1.0" encoding="utf-8"?>


    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/anuncio">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/root"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/info"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:padding="6sp">
                <TextView
                    android:id="@+id/left_footer_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_placeholder_materia"
                    />
                <TextView
                    android:id="@+id/divider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/divider"
                    android:paddingLeft="10sp"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp"
                    android:paddingRight="10sp"
                    />
                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_placeholder_hora"/>
            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/user_header"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="18dp"
                android:paddingStart="18dp"
                android:layout_below="@id/info">
                <include layout="@layout/user_header" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imagen"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:src="@drawable/imagen_respuesta_1"
                android:layout_below="@id/user_header" />

            <TextView
                android:id="@+id/pregunta_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imagen"
                android:text="@string/anuncio_placeholder"
                android:minLines="3"
                android:maxLines="5"
                android:paddingLeft="10sp"
                android:paddingStart="10sp"
                android:paddingTop="5sp"/>

            <include layout="@layout/edit_footer" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
