<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_scrollFlags="scroll|enterAlways|snap" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="espol.ihm.preguntaespol.AskActivity">

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/materias_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_title_materia"
            app:met_floatingLabel="normal" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/titulo_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_maxCharacters="50"
            android:hint="@string/form_title_titulo"
            app:met_floatingLabel="normal" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/desc_edittext"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:hint="@string/form_title_descripcion"

            android:gravity="top"
            app:met_floatingLabel="normal" />
    </LinearLayout>

</LinearLayout>

