<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recompensa_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:id="@+id/recompensa_card_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_titulo_anuncio_card"
                android:textStyle="bold"
                android:textColor="@color/cardText"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.75dp"
            android:background="@color/neutral" />
        <TextView
                android:id="@+id/recompensa_card_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_body_anuncio_card"
                android:textColor="@color/cardText"
                android:minLines="2"
                android:padding="20dp"
                android:alpha="0.87" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="5dp">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_recompensa_card"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:padding="15dp"
                android:background="@drawable/button_background"
                android:alpha="0.54"
                style="?android:attr/borderlessButtonStyle"/>
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
</LinearLayout>